# zerebro-langraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  app.py  chainlit.md  docker-compose.yml  langgraph.json  pyproject.toml  run.sh
src/cerebro/: __init__.py  graph.py
src/cerebro/agents/: __init__.py  cerebro.py  config.py  mcp_registry.py  mcp_servers.yaml  meta_tools.py  runner.py  store.py
src/cerebro/observability/: __init__.py  phoenix_setup.py
